--- a/app/src/main/res/layout/bottomsheet_staff_select.xml
+++ b/app/src/main/res/layout/bottomsheet_staff_select.xml
@@ -96,7 +96,7 @@
                         android:layout_centerInParent="true"
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/bungee"
-                        android:text="specator"
+                        android:text="observer"
                         android:textColor="#000000"
                         android:textSize="18sp" />
 
