--- a/app/src/main/res/layout/custom_participants_layout.xml
+++ b/app/src/main/res/layout/custom_participants_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp">
@@ -17,18 +18,18 @@
             android:layout_gravity="center_vertical">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/profileLine"
-                android:background="@drawable/circle_background">
-
-            </de.hdodenhof.circleimageview.CircleImageView>
-
-            <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:id="@+id/profilePicStaff"
                 android:src="@drawable/color_primary_person">
+
+            </de.hdodenhof.circleimageview.CircleImageView>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/profileLine"
+                android:background="@drawable/circle_background">
 
             </de.hdodenhof.circleimageview.CircleImageView>
 
@@ -64,7 +65,8 @@
                     android:id="@+id/position"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@color/primaryTextColor"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold"
                     android:textSize="16sp"
                     android:text="position">
 
@@ -76,30 +78,15 @@
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="40dp"
+        <Button
+            android:id="@+id/selectBtn"
+            android:layout_width="90dp"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
-            >
+            android:text="select"
+            app:cornerRadius="7dp">
 
-            <ImageView
-                android:id="@+id/addBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_baseline_add_circle_outline_24">
-
-            </ImageView>
-
-            <ImageView
-                android:id="@+id/addedBtn"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/check"
-                android:visibility="gone">
-
-            </ImageView>
-
-        </RelativeLayout>
+        </Button>
 
     </LinearLayout>
 
