--- a/app/src/main/res/layout/custom_project_list.xml
+++ b/app/src/main/res/layout/custom_project_list.xml
@@ -50,6 +50,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/userProfileLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -126,9 +127,12 @@
         android:layout_marginRight="2dp">
 
         <LinearLayout
+            android:id="@+id/lastTextLL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone"
+            >
 
             <TextView
                 android:id="@+id/tv_status"
@@ -167,6 +171,15 @@
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/checkBtn"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/check"
+            android:visibility="gone">
+
+        </ImageView>
 
     </RelativeLayout>
 
