--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -12,10 +12,6 @@
     android:backgroundTint="@color/icons">
 
     <!-- TODO: Update blank fragment layout -->
-    <ScrollView
-
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/ll"
@@ -119,6 +115,16 @@
 
         </LinearLayout>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -199,6 +205,7 @@
             android:background="@android:color/darker_gray"/>
 
         <LinearLayout
+            android:id="@+id/responsibleLL"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:orientation="vertical"
@@ -260,6 +267,7 @@
             android:background="@android:color/darker_gray"/>
 
         <LinearLayout
+            android:id="@+id/observerFullLL"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:orientation="vertical"
@@ -289,6 +297,7 @@
                 </androidx.recyclerview.widget.RecyclerView>
 
                 <ImageView
+                    android:id="@+id/editObsBtn"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/ic_baseline_edit_24"
@@ -301,10 +310,34 @@
         </LinearLayout>
 
                 <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="2dp"
-            android:background="@android:color/darker_gray"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="2dp"
+                    android:background="@android:color/darker_gray"/>
+
+                <LinearLayout
+                    android:id="@+id/obsRecyclerViewLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:visibility="gone">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/observersRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_marginTop="2dp"
+                        android:background="@android:color/darker_gray"/>
+
+                </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -336,6 +369,7 @@
                 </androidx.recyclerview.widget.RecyclerView>
 
                 <ImageView
+                    android:id="@+id/editParticipantBtn"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/ic_baseline_edit_24"
@@ -423,12 +457,14 @@
                     android:layout_height="25dp">
 
                 <ImageView
+                    android:id="@+id/completeBtn"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/ic_baseline_play_circle_filled_24"
                     android:tint="@color/greenlite"/>
 
                     <ImageView
+                        android:id="@+id/startBtn"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/ic_baseline_pause_circle_filled_24"
@@ -484,6 +520,7 @@
                 </TextView>
 
                 <ImageView
+                    android:id="@+id/editDateTimeBtn"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:src="@drawable/ic_baseline_cancel_24"
@@ -531,6 +568,7 @@
                 </TextView>
 
                 <LinearLayout
+                    android:id="@+id/addIntoProjectLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -553,6 +591,7 @@
                         </de.hdodenhof.circleimageview.CircleImageView>
 
                         <ImageView
+                            android:id="@+id/projectFolderImg"
                             android:layout_width="30dp"
                             android:layout_height="30dp"
                             android:layout_centerInParent="true"
@@ -564,6 +603,7 @@
                     </RelativeLayout>
 
                     <TextView
+                        android:id="@+id/projectName"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -575,6 +615,7 @@
                     </TextView>
 
                     <ImageView
+                        android:id="@+id/addToProjectBtn"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:src="@drawable/ic_baseline_add_circle_outline_24"
@@ -600,6 +641,7 @@
                 </TextView>
 
                 <LinearLayout
+                    android:id="@+id/addFilesBtn"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:orientation="horizontal"
@@ -688,6 +730,7 @@
                     android:text="SUBTASKS"/>
 
                 <LinearLayout
+                    android:id="@+id/addSubTasksBtn"
                     android:layout_width="match_parent"
                     android:layout_height="55dp"
                     android:gravity="center_vertical"
@@ -753,6 +796,7 @@
                     android:gravity="center">
 
                     <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/subTaskRecycler"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
@@ -763,9 +807,11 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-    </LinearLayout>
+        </LinearLayout>
 
-    </ScrollView>
+        </ScrollView>
+
+    </LinearLayout>
 
 </FrameLayout>
 
