--- a/app/src/main/res/layout/chat_itm_right.xml
+++ b/app/src/main/res/layout/chat_itm_right.xml
@@ -116,4 +116,124 @@
 
     </androidx.cardview.widget.CardView>
 
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_pdf"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/mainbg"
+        app:cardCornerRadius="15dp"
+        android:backgroundTint="@color/light">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:orientation="horizontal">
+
+<!--                <TextView-->
+<!--                    android:id="@+id/fullNamePdf"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:text="Full Name"-->
+<!--                    android:textColor="@color/colorPrimary"-->
+<!--                    android:textSize="16dp"-->
+<!--                    android:textStyle="bold">-->
+
+<!--                </TextView>-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/timePdf"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="time"-->
+<!--                    android:textColor="@color/grey"-->
+<!--                    android:textSize="14dp"-->
+<!--                    android:layout_marginLeft="20dp">-->
+
+<!--                </TextView>-->
+
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@drawable/mainbg"
+                app:cardCornerRadius="15dp"
+                android:backgroundTint="@color/colorPrimary">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/red">
+
+                        <ImageView
+                            android:id="@+id/contentPdf"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_centerInParent="true"
+                            android:maxHeight="350dp"
+                            android:minHeight="250dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_baseline_picture_as_pdf_24">
+
+                        </ImageView>
+
+
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:background="@color/light"
+                        android:gravity="center_vertical"
+                        android:minHeight="40dp">
+
+                        <TextView
+                            android:id="@+id/pdfName"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="pdf_name.pdf"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16dp"
+                            android:textStyle="bold"
+                            android:layout_margin="2dp">
+
+                        </TextView>
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/downloadBtn"
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@drawable/download_icon"
+                            android:layout_marginRight="5dp">
+
+                        </de.hdodenhof.circleimageview.CircleImageView>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
 </LinearLayout>
