--- a/app/src/main/res/layout/custom_groupchat_right.xml
+++ b/app/src/main/res/layout/custom_groupchat_right.xml
@@ -5,23 +5,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="5dp"
     android:layout_marginBottom="5dp"
+    android:gravity="end"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_msg"
+    <LinearLayout
+        android:id="@+id/txtLL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:text="this is text msg"
+        android:orientation="vertical"
         android:background="@drawable/txt_chat_bg"
         android:backgroundTint="#ffffff"
         android:padding="4dp"
-        android:paddingEnd="12dp"
         android:paddingStart="12dp"
-        android:layout_marginEnd="80dp"
-        android:textColor="@color/primaryTextColor">
+        android:paddingEnd="12dp"
+        android:layout_marginStart="80dp">
 
-    </TextView>
+
+        <TextView
+            android:id="@+id/fullNameTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Full Name"
+            android:textColor="@color/colorPrimary"
+            android:textSize="14dp"
+            android:textStyle="bold">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/tv_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18dp"
+            android:text="this is text msg"
+            android:textColor="@color/primaryTextColor">
+
+        </TextView>
+
+    </LinearLayout>
+
 
 
     <androidx.cardview.widget.CardView
@@ -44,6 +66,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/fullNameImg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Full Name"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    android:background="@color/light">
+
+                </TextView>
+
                 <ImageView
                     android:id="@+id/msgSendImage"
                     android:layout_width="match_parent"
@@ -51,7 +85,8 @@
                     android:src="@drawable/photo_white"
                     android:scaleType="centerCrop"
                     android:maxHeight="250dp"
-                    android:minHeight="250dp">
+                    android:minHeight="250dp"
+                    android:layout_below="@id/fullNameImg">
 
                 </ImageView>
                 <ImageView
@@ -145,17 +180,6 @@
                     android:textColor="@color/colorPrimary"
                     android:textSize="16dp"
                     android:textStyle="bold">
-
-                </TextView>
-
-                <TextView
-                    android:id="@+id/timePdf"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="time"
-                    android:textColor="@color/grey"
-                    android:textSize="14dp"
-                    android:layout_marginLeft="20dp">
 
                 </TextView>
 
